Enforce using `List.of(...)` instead of `Arrays.asList(...)`