@@ -16,7 +16,6 @@
 
 package org.springframework.boot.actuate.couchbase;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -72,10 +71,9 @@ class CouchbaseHealthIndicatorTests {
 		Cluster cluster = mock(Cluster.class);
 		CouchbaseHealthIndicator healthIndicator = new CouchbaseHealthIndicator(cluster);
 		Map<ServiceType, List<EndpointDiagnostics>> endpoints = Collections.singletonMap(ServiceType.KV,
-				Arrays.asList(
-						new EndpointDiagnostics(ServiceType.KV, EndpointState.CONNECTED, CircuitBreaker.State.DISABLED,
-								"127.0.0.1", "127.0.0.1", Optional.empty(), Optional.of(1234L),
-								Optional.of("endpoint-1"), Optional.empty()),
+				List.of(new EndpointDiagnostics(ServiceType.KV, EndpointState.CONNECTED, CircuitBreaker.State.DISABLED,
+						"127.0.0.1", "127.0.0.1", Optional.empty(), Optional.of(1234L), Optional.of("endpoint-1"),
+						Optional.empty()),
 						new EndpointDiagnostics(ServiceType.KV, EndpointState.CONNECTING, CircuitBreaker.State.DISABLED,
 								"127.0.0.1", "127.0.0.1", Optional.empty(), Optional.of(1234L),
 								Optional.of("endpoint-2"), Optional.empty())));
