@@ -17,7 +17,6 @@
 package org.springframework.boot.autoconfigure;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -97,19 +96,19 @@ class AutoConfigurationSorterTests {
 
 	@Test
 	void byOrderAnnotation() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(LOWEST, HIGHEST, DEFAULT));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(LOWEST, HIGHEST, DEFAULT));
 		assertThat(actual).containsExactly(HIGHEST, DEFAULT, LOWEST);
 	}
 
 	@Test
 	void byAutoConfigureAfter() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(A, B, C));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(A, B, C));
 		assertThat(actual).containsExactly(C, B, A);
 	}
 
 	@Test
 	void byAutoConfigureAfterAliasFor() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(A3, B2, C));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(A3, B2, C));
 		assertThat(actual).containsExactly(C, B2, A3);
 	}
 
@@ -118,19 +117,19 @@ class AutoConfigurationSorterTests {
 		MetadataReaderFactory readerFactory = new CachingMetadataReaderFactory();
 		this.autoConfigurationMetadata = getAutoConfigurationMetadata(A3, B2, C);
 		this.sorter = new AutoConfigurationSorter(readerFactory, this.autoConfigurationMetadata);
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(A3, B2, C));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(A3, B2, C));
 		assertThat(actual).containsExactly(C, B2, A3);
 	}
 
 	@Test
 	void byAutoConfigureBefore() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(X, Y, Z));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(X, Y, Z));
 		assertThat(actual).containsExactly(Z, Y, X);
 	}
 
 	@Test
 	void byAutoConfigureBeforeAliasFor() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(X, Y2, Z2));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(X, Y2, Z2));
 		assertThat(actual).containsExactly(Z2, Y2, X);
 	}
 
@@ -139,44 +138,44 @@ class AutoConfigurationSorterTests {
 		MetadataReaderFactory readerFactory = new CachingMetadataReaderFactory();
 		this.autoConfigurationMetadata = getAutoConfigurationMetadata(X, Y2, Z2);
 		this.sorter = new AutoConfigurationSorter(readerFactory, this.autoConfigurationMetadata);
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(X, Y2, Z2));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(X, Y2, Z2));
 		assertThat(actual).containsExactly(Z2, Y2, X);
 	}
 
 	@Test
 	void byAutoConfigureAfterDoubles() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(A, B, C, E));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(A, B, C, E));
 		assertThat(actual).containsExactly(C, E, B, A);
 	}
 
 	@Test
 	void byAutoConfigureMixedBeforeAndAfter() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(A, B, C, W, X));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(A, B, C, W, X));
 		assertThat(actual).containsExactly(C, W, B, A, X);
 	}
 
 	@Test
 	void byAutoConfigureMixedBeforeAndAfterWithClassNames() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(A2, B, C, W2, X));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(A2, B, C, W2, X));
 		assertThat(actual).containsExactly(C, W2, B, A2, X);
 	}
 
 	@Test
 	void byAutoConfigureMixedBeforeAndAfterWithDifferentInputOrder() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(W, X, A, B, C));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(W, X, A, B, C));
 		assertThat(actual).containsExactly(C, W, B, A, X);
 	}
 
 	@Test
 	void byAutoConfigureAfterWithMissing() {
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(A, B));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(A, B));
 		assertThat(actual).containsExactly(B, A);
 	}
 
 	@Test
 	void byAutoConfigureAfterWithCycle() {
 		this.sorter = new AutoConfigurationSorter(new CachingMetadataReaderFactory(), this.autoConfigurationMetadata);
-		assertThatIllegalStateException().isThrownBy(() -> this.sorter.getInPriorityOrder(Arrays.asList(A, B, C, D)))
+		assertThatIllegalStateException().isThrownBy(() -> this.sorter.getInPriorityOrder(List.of(A, B, C, D)))
 			.withMessageContaining("AutoConfigure cycle detected");
 	}
 
@@ -185,7 +184,7 @@ class AutoConfigurationSorterTests {
 		MetadataReaderFactory readerFactory = new SkipCycleMetadataReaderFactory();
 		this.autoConfigurationMetadata = getAutoConfigurationMetadata(A2, B, C, W2, X);
 		this.sorter = new AutoConfigurationSorter(readerFactory, this.autoConfigurationMetadata);
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(A2, B, C, W2, X));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(A2, B, C, W2, X));
 		assertThat(actual).containsExactly(C, W2, B, A2, X);
 	}
 
@@ -194,7 +193,7 @@ class AutoConfigurationSorterTests {
 		MetadataReaderFactory readerFactory = new SkipCycleMetadataReaderFactory();
 		this.autoConfigurationMetadata = getAutoConfigurationMetadata(A, B, E);
 		this.sorter = new AutoConfigurationSorter(readerFactory, this.autoConfigurationMetadata);
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(A, E));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(A, E));
 		assertThat(actual).containsExactly(E, A);
 	}
 
@@ -203,7 +202,7 @@ class AutoConfigurationSorterTests {
 		MetadataReaderFactory readerFactory = new CachingMetadataReaderFactory();
 		this.autoConfigurationMetadata = getAutoConfigurationMetadata(A, B, D);
 		this.sorter = new AutoConfigurationSorter(readerFactory, this.autoConfigurationMetadata);
-		assertThatIllegalStateException().isThrownBy(() -> this.sorter.getInPriorityOrder(Arrays.asList(D, B)))
+		assertThatIllegalStateException().isThrownBy(() -> this.sorter.getInPriorityOrder(List.of(D, B)))
 			.withMessageContaining("AutoConfigure cycle detected");
 	}
 
@@ -214,7 +213,7 @@ class AutoConfigurationSorterTests {
 		String oa2 = OrderAutoConfigureASeedY2.class.getName();
 		String oa3 = OrderAutoConfigureASeedA3.class.getName();
 		String oa4 = OrderAutoConfigureAutoConfigureASeedG4.class.getName();
-		List<String> actual = this.sorter.getInPriorityOrder(Arrays.asList(oa4, oa3, oa2, oa1, oa));
+		List<String> actual = this.sorter.getInPriorityOrder(List.of(oa4, oa3, oa2, oa1, oa));
 		assertThat(actual).containsExactly(oa1, oa2, oa3, oa4, oa);
 	}
 
