@@ -17,7 +17,6 @@
 package org.springframework.boot.docs.appendix.configurationmetadata.annotationprocessor.automaticmetadatageneration;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.boot.context.properties.ConfigurationProperties;
@@ -25,7 +24,7 @@ import org.springframework.boot.context.properties.ConfigurationProperties;
 @ConfigurationProperties(prefix = "my.messaging")
 public class MyMessagingProperties {
 
-	private List<String> addresses = new ArrayList<>(Arrays.asList("a", "b"));
+	private List<String> addresses = new ArrayList<>(List.of("a", "b"));
 
 	private ContainerType containerType = ContainerType.SIMPLE;
 
