@@ -16,9 +16,9 @@
 
 package org.springframework.boot.test.autoconfigure.web.servlet;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Set;
 
 import org.springframework.boot.autoconfigure.web.servlet.WebMvcRegistrations;
@@ -108,7 +108,7 @@ public final class WebMvcTypeExcludeFilter extends StandardAnnotationCustomizabl
 
 	@Override
 	protected Set<Class<?>> getComponentIncludes() {
-		return new LinkedHashSet<>(Arrays.asList(this.controllers));
+		return new LinkedHashSet<>(List.of(this.controllers));
 	}
 
 }
