@@ -16,7 +16,7 @@
 
 package org.springframework.boot.test.mock.mockito;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -80,7 +80,7 @@ class MockBeanWithAopProxyTests {
 		@Bean
 		ConcurrentMapCacheManager cacheManager() {
 			ConcurrentMapCacheManager cacheManager = new ConcurrentMapCacheManager();
-			cacheManager.setCacheNames(Arrays.asList("test"));
+			cacheManager.setCacheNames(List.of("test"));
 			return cacheManager;
 		}
 
